workspace = { members = ["macros"] }
[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-of-code-macros = {path = "macros", version = "*"}
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["cookies"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
